--- a/_posts/2015-02-01-tom-ford.md
+++ b/_posts/2015-02-01-tom-ford.md
@@ -2,6 +2,7 @@
 title: "Tom Ford Spring 2015"
 permalink: /press/tom-ford-spring-2015.html
 layout: default
+published: false
 gallery:
  - image: /assets/img/tomford_1.jpg
  - image: /assets/img/tomford_2.jpg
